middleware/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: gateway-svc
            port:
              number: 8000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-svc
            port:
              number: 80

---
apiVersion: v1
kind: Service
metadata:
  name: gateway-svc
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: gateway.gateway.svc.cluster.local

---
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: ingress-nginx
spec:
  type: ExternalName
  externalName: web.gateway.svc.cluster.local
